Fix navigation z-index.

--- a/assets/scss/criticalmass.scss
+++ b/assets/scss/criticalmass.scss
@@ -183,7 +183,7 @@
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.35);
   padding: 0.65rem 0;
   position: relative;
-  z-index: 20;
+  z-index: 1500;
 
   .navbar-brand {
     color: #fff;
